Complete Etch a Sketch project

--- a/style.css
+++ b/style.css
@@ -1,18 +1,42 @@
 body {
-    margin: 40px;
-    padding: 0;
+    padding: 10px;
 }
 
 .container {
     margin: 0 auto;
     width: 850px;
+    height: 850px;
     display: flex;
     flex-wrap: wrap;
-    gap: 2px;
+    border: 5px solid rgb(0, 0, 0);
 }
 
 .item {
-    width: 50px;
-    height: 50px;
     background-color: rgb(13, 95, 183);
+    box-sizing: border-box;
+    border: 2px solid black;
+    transition: background-color 0.2s ease;
+}
+
+.container-btn {
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.btn {
+    padding: 15px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 3px 3px 10px rgb(13, 95, 183);
+    background-color: rgb(234, 6, 6);
+    font-size: 20px;
+    font-weight: 700;
+    color: white;;
+}
+
+.btn:hover {
+    cursor: pointer;
+    background-color: rgb(126, 4, 4);
+
 }
